css/style.css
:root{
    --light-color:#F5F5F5;
    --dark-color:#2E282A;
    --second-color:#F15025;
    --shadow-color : #9d2b0b;
    --text-font: "Montserrat",'sans serif';
}

*,*::after,*::before{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
img{
    -webkit-user-drag: none;
}
html{
    font-family: "Montserrat", 'sans serif';
}
body{
    height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: var(--light-color);
}
.main-header{
    height: 15%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.3rem;
    letter-spacing: .3rem;
}
.main-header h1{
    font-weight: 400;
}
main{
    height: 85%;
}
section{
    height: 100%;
    display: flex;
    justify-content: start;
    align-items: center;
    flex-direction: column;
    gap: 5px;
    padding: 20px;
}

.date-input-container{
    margin-top: 10px;
    padding: 8px;
    border: 2px solid var(--dark-color);
    border-radius: 15px 15px 10px 10px;
    width: 350px;
    height:75px;  
    display: flex; 
    gap: 10px;
}
.input-container{
    display: flex;
    border: 2px solid var(--dark-color);
    border-radius: 10px;
    width: 82%;
    align-items: center;
    justify-content: center;
    gap: 5px;

    :nth-child(3), :nth-child(1){
        padding: 5px; 
        padding-left: 20px;
    }
    }
.input-container input{
    border-radius: 10px;
    border: 2px solid var(--light-color);
    width: 30%;
    height: 100%;
    font-family: "Montserrat", 'sans serif';
    padding: 10px;
    font-size: 1.3rem;
    font-weight: 500;
    color: var(--second-color);
    background-color: var(--light-color);
    outline: none;
    display: flex;
}
.input-container p{
    font-size: 1.5rem;
    opacity: .8;
    width: 5px;
}
.calendar-button{
    padding: 1px;
    width: 18%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    border: var(--dark-color) 2px solid;
    border-radius: 10px;
    
    button{
        display: flex;
        justify-content: center;
        align-items: center;
        all: unset;
        cursor: pointer;
        filter: drop-shadow(0px 2.5px var(--shadow-color));
        transition: .1s ease-in-out;
        transition: .1s ease-in-out;
        &:focus-visible{
            outline: 3px solid var(--second-color);
            border-radius: 50%;
        }
        &:active{
            transform: translateY(3px);
            filter: drop-shadow(0px 0px);
            transition: .1s ease-in-out;
        }
    }
}
.calendar-button img{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}
.calendar-container{
    border-radius: 10px 10px 15px 15px;
    padding: 8px;
    flex-direction: column;
    display: none;
    border: 2px solid var(--dark-color);
    width: 350px;
    height: 400px;
    margin-bottom: 10px;
}
.calendar-header{
    border: 2px solid var(--dark-color);
    height: 100px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border-bottom: none;
}

.month-container{
    gap: 10%;
    display: flex;
    width: 100%;
    height: 50%;
    justify-content: center;
    align-items: center;
}
.prev, .next{
    all: unset;
    width: 15%;
    cursor: pointer;
    transition: .2s ease-in-out;
    
    filter:drop-shadow(0px 2px var(--shadow-color));
    &:active{
        filter:drop-shadow(0px 0px var(--shadow-color));
        transform: translateY(2.5px);
    }  

    &:focus-visible{
        border-radius: 100%;
        outline: 3px solid var(--second-color);
    }

   
}
.month-container h5{
    display: flex;
    justify-content: center;
    font-size: 1.3rem;
    width: 50%;

}
.days-container{
    height: 40%;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
}

.days-container p{
    font-weight: 700;
    font-size: 1.2rem;
    display: flex;
    justify-content: center;
    align-items: center;
    aspect-ratio: 1/1;
}

.days{
    height:270px;
    width: 100%;
    display: grid;
    grid-template-columns: repeat(7,1fr);
    grid-template-rows: repeat(6,1fr);
    background-color: var(--dark-color); 
    gap: .5px; 
    border: 2px solid var(--dark-color);
    
}
.day{
    position: relative;
    font-size: 1.2rem;
    font-weight: 500;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--light-color);
    transition: .3s ease-in-out;
    border: .3px solid var(--dark-color);

    cursor: pointer;

    user-select: none;
}

.day:hover{
    transition: .1s ease-in-out;
    transform:translateY(-.5px);
    box-shadow: 0px 2px var(--second-color);
    border-color: var(--second-color);
    color: var(--second-color);
}
.day.active{
    transform:translateY(-2px);
    box-shadow: 0px 2px var(--shadow-color);
    border-color: var(--second-color);
    border-width: 2px;
    color: var(--second-color);
}
.day.empty {
    background-color: #dedede ;
    transition: .1s ease-in-out;
    &:hover{
        transition: .1s ease-in-out;
        transform:translateY(-.5px);
        box-shadow: 0px 2px #868082;
        border-color: #191517;
    }
}

.calculate-container{
    width: 350px;
    height: 50px;
    border-radius: 10px;

    button{
        all: unset;
        display: flex;
        justify-content: center;
        align-items: center;
        color: var(--light-color);
        font-weight: 600;
        width: inherit;
        height: inherit;
        border-radius: inherit;
        font-size: 1.5rem;
        background-color: var(--second-color);
        cursor: pointer;
        transition: .2s ease-in-out;
        box-shadow:  0px 5px var(--shadow-color);
            
        &:focus-visible{
            background-color: #c13f1b;
        }
        &:active{
                transition: .2s ease-in-out;
                box-shadow:  0px 0px ;
                transform: translateY(5px);
            }
    }
}

.result-container{
    width: 350px;
    height: 50px;
    font-size: 1rem;
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: 600;
}

.hidden{display:flex;}

